Improved Remove functionality Fixed Edit functionality not showing existing data Improved design and coloring

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,7 +3,7 @@
   font-style: italic;
 }
 
-.edit_rmv_msg {
+.edit_msg {
   color: red;
   text-decoration: none;
   float: right;
